# AdpativeRacecarControlSoftware

./: .gitignore  99-usb-serial.rules  OpenCVBuildInstructions.txt  OpenCV_4_CompileInfoArgs.txt  README.md  StartCanBus.sh  nascar_can_bus  nascar_videre
videre/: .gitignore  CMakeLists.txt  Readme.md  videreConfig.h.in
videre/ImageProcessing/: CMakeLists.txt  Readme.md
videre/ImageProcessing/Common/: BlobDetectorFixedParameters.h  ButterworthIIRLPF.cpp  ButterworthIIRLPF.h  CMakeLists.txt  CameraCalibrationData.cpp  CameraCalibrationData.h  CommonImageProcTypesDefs.cpp  CommonImageProcTypesDefs.h  MathUtils.cpp  MathUtils.h  OpenCVMatUtils.cpp  OpenCVMatUtils.h  PixelColorValue.cpp  PixelColorValue.h  Quaternion.cpp  Quaternion.h  RollPitchYaw_t.cpp  RollPitchYaw_t.h  XYZCoord_t.cpp  XYZCoord_t.h
videre/ImageProcessing/CudaLibs/: CMakeLists.txt  Readme.md
videre/ImageProcessing/CudaLibs/CudaCommon/: CudaImageKeypointsAndFeatures.cu  CudaImageKeypointsAndFeatures.h  ImageColorThresholdKernel.cu  ImageColorThresholdKernel.h
videre/ImageProcessing/CudaLibs/GlyphDetector/: DetectGlyphs.cpp  DetectGlyphs.h  Glyph.cpp  Glyph.h  GlyphModel.cpp  GlyphModel.h  HeadPosition.cpp  HeadPosition.h  TrackHeadProcess.cpp  TrackHeadProcess.h
videre/ImageProcessing/CudaLibsUnitTests/: CMakeLists.txt  TestCuda.cu
videre/ImageProcessing/CudaLibsUnitTests/TestCudaCommon/: .cproject  .project  CMakeLists.txt  TestCudaSmVecs.cu  TestCudaSmVecs.h  main.cpp
videre/ImageProcessing/StandardLibs/: CMakeLists.txt  Readme.md
videre/ImageProcessing/StandardLibs/GPSDeniedImageProcessing/: CMakeLists.txt  GPSDeniedImageProcessor.cpp  GPSDeniedImageProcessor.h  ImageAlignment.cpp  ImageAlignment.h
videre/ImageProcessing/StandardLibs/StdCommon/: ImageFeatureMatcher.cpp  ImageFeatureMatcher.h  ImageKeypointsAndFeatures.cpp  ImageKeypointsAndFeatures.h
videre/ImageProcessing/StandardLibsUnitTests/: CMakeLists.txt
videre/Tools/: fastDDS.sh  tail_logs.py.in
videre/cmake/: utils.cmake
videre/cmake/Modules/: FindRabit.cmake  FindSocketCan.cmake
videre/models/: visor_v2_bolts_back.glf
videre/rabitcpp/: CMakeLists.txt  README.md
videre/rabitcpp/cmake/: utils.cmake
videre/rabitcpp/rabit/: CMakeLists.txt
videre/rabitcpp/rbx_tools/: rabit_msg_helper.py
videre/sample_config_files/: Log4CxxConfig.xml.sample  VidereConfig.ini.sample
videre/sample_config_files/GlyphModels/: GlyphModelXLHelmet.glf  visor_final_james.glf
videre/test/: CMakeLists.txt
videre/test/UnitTests/: CMakeLists.txt
videre/test/UnitTests/TestGeoCoordinateSystem/: CMakeLists.txt  TestLatLonAltCoord.cpp  TestLatLonAltCoord.h  main.cpp
videre/test/UnitTests/TestMessages/: CMakeLists.txt  VehicleIntertialStatesMsgTests.cpp  VehicleIntertialStatesMsgTests.h  main.cpp  testMessagePool.cpp  testMessagePool.h
videre/test/test_config/: CMakeLists.txt  main.cpp
videre/test/test_managers/: CMakeLists.txt
videre/videre/: CMakeLists.txt  Readme.md  main.cpp.em
videre/videre/Configurations/: dtx_imu_configuration.cmake  product_configuration.cmake
videre/videre/GeoCoordinateSystem/: AzimuthElevation_t.cpp  AzimuthElevation_t.h  CMakeLists.txt  GeoCoordinateSystem.cpp  GeoCoordinateSystem.h  LatLonAltStruct.cpp  LatLonAltStruct.h  LatLonUtmTransformations.cpp  LatLonUtmTransformations.h
videre/videre/ImageProcessing/: CMakeLists.txt  CheckerBdTargetDetector.cpp  CheckerBdTargetDetector.h  TargetDetector.cpp  TargetDetector.h  TargetDetectorProcessControl.cpp  TargetDetectorProcessControl.h
videre/videre/Messages/: AccelerometerGyroMessage.h  CMakeLists.txt  CameraCalCommandMessage.h  CameraCalStatusMessage.h  CameraOrientationMessage.cpp  CameraOrientationMessage.h  CameraParametersSetupMessage.cpp  CameraParametersSetupMessage.h  CompressedImageMessage.cpp  CompressedImageMessage.h  DceEPASteeringStatusMessage.h  FeatureMatchProcCtrlMessage.cpp  FeatureMatchProcCtrlMessage.h  FeatureMatchProcStatusMessage.h  GPSFixMessage.cpp  GPSFixMessage.h  HeadOrientationCalDataMessage.h  HeadOrientationControlMessage.h  HeadOrientationMessage.h  HeadTrackingControlMessage.h  HeadTrackingOrientationMessage.h  IMUCommandResponseMessage.h  ImageCaptureContolMessage.cpp  ImageCaptureControlMessage.h  ImageCaptureStatusMessage.cpp  ImageCaptureStatusMessage.h  ImageLoggingControlMessage.h  ImageProcTargetInfoResultsMessage.cpp  ImageProcTargetInfoResultsMessage.h  ImageProcessControlMessage.h  KarTechLinearActuatorParamsMessage.h  KarTechLinearActuatorSetupMessage.h  LinearActuatorPositionCtrlMessage.h  MsgWrapper.cpp  MsgWrapper.h  PlaybackControlMessage.h  QuaternionMessage.h  RemoteControlInputMessage.h  ResetOrientationStateMessage.h  SipnPuffControlMessage.h  (+18 more)
videre/videre/NemaTodeGpsParser/: CMakeLists.txt  GPSFix.cpp  GPSService.cpp  GPSService.h  NMEACommand.cpp  NMEACommand.h  NMEAParser.cpp  NMEAParser.h  NumberConversion.cpp  nmea.h
videre/videre/ProtobufMessages/: CMakeLists.txt
videre/videre/RabitMsgs/: CMakeLists.txt  DTX_IMU_SensorSetCommandMsg.msg  DTX_IMU_SensorSetValuesMsg.msg  DTX_IMU_SystemCommandMsg.msg  DTX_IMU_SystemStatusMsg.msg  ImageCaptureControlRBMsg.msg  ImageCaptureStatusRBMsg.msg  ImageCompressionControlRBMsg.msg  MgrDtxConnectionStatusMsg.msg  StreamControlRBMsg.msg  TstGlyphDetectionParametersRBMsg.msg  VidereRecordControlMsg.msg  VidereRecordStatusMsg.msg  host_conn_req.msg  nexusBCIControlConfigMsg.msg  nexusBCIThrottleControlMsg.msg  sipnPuffBCIMsg.msg  sipnPuffConfigMsg.msg
videre/videre/Utils/: ByteArrayReaderWriterVidere.cpp  ByteArrayReaderWriterVidere.h  CMakeLists.txt  CubicSplineProcessor.cpp  CubicSplineProcessor.h  DataLogReader.cpp  DataLogReader.h  DataRecorder.cpp  DataRecorder.h  DataRecorderAbstractRecord.cpp  DataRecorderAbstractRecord.h  DataRecorderStdHeader.cpp  DataRecorderStdHeader.h  FileUtils.cpp  FileUtils.h  HostSystemInfo.cpp  HostSystemInfo.h  LockFreeQueue.h  RS232Comm.cpp  RS232Comm.h  SerialCommMessage.cpp  SerialCommMessage.h  config_data.cpp  config_data.h  config_parse_exception.h  global_defines.cpp  global_defines.h  logger.h  timing.h
(+494 files in other folders)
